# wasmos

./: Cargo.toml  build.rs
.cargo/: config.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: main.rs
crates/kernel/src/arch/x86_64/: int.rs  mem.rs  mod.rs  panic.rs
crates/kernel/src/log/: mod.rs
crates/kernel/src/sync/: executor.rs  task.rs
crates/wasmos/: Cargo.toml
crates/wasmos/src/: main.rs
crates/wlib/: Cargo.toml
crates/wlib/src/: lib.rs
crates/wshell/: Cargo.toml
crates/wshell/src/: main.rs
src/: main.rs  qemu.rs
src/arch/x86_64/: int.rs  mem.rs  mod.rs
src/exec/: mod.rs
src/log/: mod.rs
