[package]
name = "wasmos"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/wlib", "crates/wshell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.26.0" }
wasmi = { version = "0.31.2", default-features = false }
talc = "4.2.0"
spin = "0.9.8"
woke = "0.0.4"

# x86_64 stuff
uart_16550 = "0.3"
x86_64 = "0.14.11"

# os applications
wshell = { path = "crates/wshell", artifact = "bin", target = "wasm32-unknown-unknown" }

[package.metadata.bootuefi]
run-args = [
    "-serial",
    "stdio",
    "-nographic",
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
]
test-args = [
    "-serial",
    "stdio",
    "-nographic",
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
]
test-success-exit-code = 33
