[package]
name = "wasmos"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/kernel", "crates/wlib", "crates/wshell"]

[dependencies]
ovmf-prebuilt = { git = "https://github.com/rust-osdev/ovmf-prebuilt.git", branch = "release" }
tempdir = "0.3"
anyhow = "1"

[build-dependencies]
kernel = { path = "crates/kernel", artifact = "bin", target = "x86_64-unknown-uefi" }
