[package]
name = "wasmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.24.0", features = ["alloc"] }
uefi-services = "0.21.0"
wasmi = { version = "0.30.0", default-features = false }

wshell = { path = "../wshell", artifact = "bin", target = "wasm32-unknown-unknown" }
